spacing for each input element in the contact form working correctly

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -924,7 +924,7 @@ body {
 .contact-form__input-box {
   font-size: 2rem;
   font-family: 'Lato', sans-serif;
-  font-weight: 300; }
+  font-weight: 400; }
   .contact-form__input-box input,
   .contact-form__input-box textarea {
     font-size: inherit;
@@ -1622,12 +1622,14 @@ body {
 .contact-form {
   height: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 2rem; }
+  flex-direction: column; }
+  .contact-form__heading {
+    margin-bottom: 2rem; }
   .contact-form__container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start;
     flex: 1; }
   .contact-form__group {
     display: flex;
@@ -1637,18 +1639,15 @@ body {
     border-top: 2px solid var(--color-grey-dark-5);
     padding: 2rem 0 0 0;
     flex: 0 0 45%;
-    /*     &:not(:last-child) {
-      margin-bottom: 3rem;
-    } */ }
+    margin-bottom: 2rem; }
     .contact-form__group--message {
-      flex: 1 0 100%; }
+      flex: 1; }
       .contact-form__group--message .contact-form__input-box {
         border: 1.5px solid var(--color-white);
         height: 100%; }
         .contact-form__group--message .contact-form__input-box textarea {
           height: 100%;
           resize: none;
-          vertical-align: top;
           overflow: auto; }
     .contact-form__group .contact-form__input-box {
       border: 1.5px solid var(--color-white);
@@ -1658,6 +1657,7 @@ body {
     padding: 1rem;
     border: none;
     border-bottom: 4px solid transparent;
+    vertical-align: bottom;
     background-color: transparent;
     color: var(--color-white);
     transition: all 0.25s; }
@@ -1666,6 +1666,9 @@ body {
       border-bottom: 4px solid var(--color-primary-light); }
       .contact-form__input:focus:invalid {
         border-bottom: 4px solid var(--color-invalid); }
+  .contact-form .btn {
+    align-self: center;
+    padding: 1.5rem 3rem; }
 
 .archive {
   display: flex;
