--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -229,7 +229,7 @@ body {
   &__input-box {
     font-size: 2rem;
     font-family: 'Lato', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
 
     input,
     textarea {
